# sdxl

./: CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  typos.toml
adts/: code.lean  index.md
archive/: code.lean  index.md
bibliography/: index.md
binary/: code.lean  index.md
check/: code.lean  index.md
classes/: index.md  recursion.lean  typeclass.lean
db/: code.lean  index.md
des/: code.lean  index.md
docgen/: index.md
docs/: index.html
docs/adts/: index.html
docs/archive/: index.html
docs/bibliography/: index.html
docs/binary/: index.html
docs/check/: index.html
docs/classes/: index.html
docs/conduct/: index.html
docs/contributing/: index.html
docs/db/: index.html
docs/des/: index.html
docs/docgen/: code.lean  index.html
docs/dup/: index.html
docs/effect/: index.html
docs/finale/: index.html
docs/func/: code.lean  index.html
docs/glob/: index.html
docs/glossary/: index.html
docs/interp/: index.html
docs/intro/: index.html
docs/layout/: code.lean  index.html
dup/: code.lean  index.md
effect/: code.lean  index.md
func/: index.md
glob/: code.lean  index.md
glossary/: index.md
interp/: code.lean  index.md
intro/: index.md
layout/: index.md
lint/: index.md
log/: 2026-05-16-02-19-lean4-intro-outline.md  2026-05-16-08-42-des-lesson.md
oop/: index.md
option/: index.md  listops.lean  missing.lean
pack/: index.md
parse/: code.lean  index.md
template/: code.lean  index.md
test/: index.md
vals/: index.md  lists.lean  types.lean
vm/: index.md
(+15 files in other folders)
